Fixed some layout issues

--- a/app/dashboard/assets/plan.css
+++ b/app/dashboard/assets/plan.css
@@ -29,7 +29,7 @@ h1 {
     display: inline-block;
     font-size: 20px;
     background-color: whitesmoke;
-    width: 71.5%;
+    width: 77%;
     left: 10%;
     top: 65%;
     position: absolute;
