--- a/app/style/chat.css
+++ b/app/style/chat.css
@@ -8,7 +8,7 @@ body {
     background-color: whitesmoke;
     border-radius: 16px;
     height: 50%;
-    width: 75%;
+    width: 80%;
     left: 10%;
     top: 10%;
 
@@ -19,7 +19,7 @@ body {
     display: inline-block;
     background-color: whitesmoke;
     border-radius: 16px;
-    width: 75%;
+    width: 80%;
     left: 10%;
     top: 65%;
 }
@@ -39,7 +39,7 @@ h1 {
     background-color: whitesmoke;
     border-radius: 16px;
     height: 50%;
-    width: 75%;
+    width: 80%;
     left: 10%;
     top: 10%;
 
